--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,59 +1,75 @@
 <ion-header>
   <ion-navbar color="primary">
+    <!-- <ion-title>
+      Event Ticket Scanner
+    </ion-title> -->
     <ion-title>
-      PY Attendance
+      Event Ticket Scanner
+      <ion-icon name="log-out" float-right class="pull-right logout-action" (click)="logout()"></ion-icon>
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <ion-item>
-    <button ion-button full icon-left (click)="scanCode()" color="secondary">
-      <ion-icon name="qr-scanner"></ion-icon>Scan Code
-    </button>
+  <ion-item text-center (click)="scanCode()" >
+    <img width="50%"  height="50%" src="assets/imgs/scan.png">
+    <!-- <button (click)="scanCode()" ion-button icon-start block color="secondary" type="button">
+      <ion-icon name="qr-scanner"></ion-icon>Scan Now
+    </button> -->
+    <p>Tap to scan QR Code</p>
   </ion-item>
 
 
   <ion-item text-center>
     <ion-label>
-      Or
+      <b>Or</b>
     </ion-label>
   </ion-item>
 
-  <ion-item>
-    <ion-label floating>
-      <ion-icon name="mail" item-start class="text-primary"></ion-icon>
-      Input Ticket Number
-    </ion-label>
-    <ion-input type="text"></ion-input>
-  </ion-item>
+  
+  <form [formGroup]="ticket">
+    <ion-item>
+    <!--   <ion-label position="fixed">
+        <ion-icon name="number"  item-start class="text-primary"></ion-icon>
+        Enter Ticket Number
+      </ion-label> -->
+      <ion-input type="tel" placeholder="Enter Ticket Number" formControlName="ticketnumber"></ion-input>
+    </ion-item>
 
-  <ion-item text-center>
-    <button ion-button icon-start block color="secondary" type="button" (click)="accept()"> Search </button>
-  </ion-item>
 
-  <ion-card>
-    <ion-card-header color="primary" text-center>
-      The Ticket is not valid
+    <ion-item text-center>
+      <button ion-button icon-start block color="secondary" type="button" (click)="manualCheckIn()"> Search
+      </button>
+    </ion-item>
+  </form>
+  
+  <ion-card *ngIf="attendeedata !=null">
+    <ion-card-header color="primary" text-center *ngIf="isPresent == 0">
+      Valid Ticket
+    </ion-card-header>
+    <ion-card-header color="primary" text-center *ngIf="isPresent == 1">
+      Already CheckIn
     </ion-card-header>
     <ion-card-content>
-      <div style="font-size: 50px;color: red;" text-center>
-        <ion-icon name="close-circle"></ion-icon>
-      </div>
-      <!-- <ion-item>
-
+      <ion-item>
         <ion-card-content>
-          <p><b>Name : </b>Kundan Sakpal</p>
-          <p><b>EventDate :</b> January 5, 2020</p>
-          <p><b>Ticket Type :</b> Group of 12 people</p>
-          <p><b>Duration :</b> 06 Hours</p>
+          <p><b>Name : </b>{{ attendeedata.name }}</p>
+          <p><b>EmailId :</b>{{ attendeedata.email }}</p>
+          <p><b>Mobile Number :</b> {{ attendeedata.mobileNumber }}</p>
+          <p><b>Total Ticket :</b> {{ attendeedata.totalTickets }}</p>
+          <p><b>Document Type :</b> {{ attendeedata.docType }}</p>
+          <p><b>Document Number :</b> {{ attendeedata.docId }}</p>
         </ion-card-content>
         <ion-row>
-          <ion-col style="font-size: 50px;color: greenyellow;" text-center>
+          <ion-col *ngIf="attendeedata.isPresent == 0" style="font-size: 50px;color: greenyellow;" text-center>
             <ion-icon text-center name="checkmark-circle"></ion-icon>
           </ion-col>
+
+          <ion-col *ngIf="attendeedata.isPresent == 1" style="font-size: 50px;color: greenyellow;" text-center>
+            <ion-icon name="close-circle"></ion-icon>
+          </ion-col>
         </ion-row>
-      </ion-item> -->
+      </ion-item>
     </ion-card-content>
 
 
