--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,7 +1,7 @@
 <ion-header>
     <ion-navbar color="primary">
       <ion-title>
-        PY-Ticketing Attende
+        pyTicket Attende
       </ion-title>
     </ion-navbar>
   </ion-header>
