--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Generate QR Code
+      pyTicket
     </ion-title>
   </ion-navbar>
 </ion-header>
