changes for ionic market place

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8">
-  <title>pyticket</title>
+  <title>TicketScan</title>
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://admin-abe-dev.squarepanda.cn ws://https://admin-abe-dev.squarepanda.cn data: gap: https://ssl.gstatic.com; style-src 'self' 'unsafe-inline'; media-src *;script-src 'self' localhost:35729 'unsafe-eval' 'unsafe-inline';">
+
   <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
