--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar color="primary">
     <ion-title>
-      pyTicket 
+      Ticket 
       <!-- <ion-icon name="log-out" float-right class="pull-right logout-action" (click)="logout()"></ion-icon> -->
     </ion-title>
   </ion-navbar>
